# royal-webapp

./: .gitignore  FULL_CODEBASE_SNAPSHOT.txt  pack_project.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  index.css
frontend/src/components/: BattleArena.jsx
royal-webapp/: pyproject.toml  royal_library.db
royal-webapp/app/: celery_client.py  database.py  main.py  models.py  schemas.py  services.py  tasks.py
royal-webapp/app/routers/: quiz.py  shop.py  system.py
royal-webapp/tests/: test_shop.py
